--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ on:
           - StandaloneWindows64
           - Android
           - iOS
+          - iOS-simulator
           - StandaloneOSX
       upload_to_testflight:
         description: 'Upload to TestFlight (iOS only)'
@@ -47,15 +48,15 @@ jobs:
       - id: set-platforms
         run: |
           if [ "${{ github.event_name }}" = "push" ] || [ "${{ github.event_name }}" = "workflow_run" ]; then
-            echo 'platforms=["Android","iOS","StandaloneWindows64","StandaloneOSX"]' >> $GITHUB_OUTPUT
+            echo 'platforms=["Android","iOS","iOS-simulator","StandaloneWindows64","StandaloneOSX"]' >> $GITHUB_OUTPUT
           else
-            echo "platforms=[\"${{ inputs.platform }}\"]" >> $GITHUB_OUTPUT
+            echo "platforms=[\"${{ github.event.inputs.platform }}\"]" >> $GITHUB_OUTPUT
           fi
   
   build:
     name: Build for ${{ matrix.platform }}
     needs: determine-platforms
-    runs-on: ${{ (matrix.platform == 'iOS' || matrix.platform == 'StandaloneOSX') && 'macos-latest' || 'ubuntu-latest' }}
+    runs-on: ${{ (matrix.platform == 'iOS' || matrix.platform == 'iOS-simulator' || matrix.platform == 'StandaloneOSX') && 'macos-latest' || 'ubuntu-latest' }}
     strategy:
       matrix:
         platform: ${{ fromJSON(needs.determine-platforms.outputs.platforms) }}
@@ -242,14 +243,30 @@ jobs:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
-          targetPlatform: ${{ matrix.platform }}
-          buildName: ${{ matrix.platform == 'iOS' && 'iOS' || (matrix.platform == 'StandaloneOSX' && 'macOS' || matrix.platform) }}
+          targetPlatform: ${{ (matrix.platform == 'iOS' || matrix.platform == 'iOS-simulator') && 'iOS' || matrix.platform }}
+          buildName: ${{ matrix.platform == 'iOS' && 'iOS' || (matrix.platform == 'iOS-simulator' && 'iOS-simulator' || (matrix.platform == 'StandaloneOSX' && 'macOS' || matrix.platform)) }}
           androidExportType: ${{ matrix.platform == 'Android' && 'androidPackage' || '' }}
           androidKeystoreName: ${{ matrix.platform == 'Android' && 'user.keystore' || '' }}
           androidKeystoreBase64: ${{ matrix.platform == 'Android' && secrets.ANDROID_KEYSTORE_BASE64 || '' }}
           androidKeystorePass: ${{ matrix.platform == 'Android' && secrets.ANDROID_KEYSTORE_PASS || '' }}
           androidKeyaliasName: ${{ matrix.platform == 'Android' && secrets.ANDROID_KEYALIAS_NAME || '' }}
           androidKeyaliasPass: ${{ matrix.platform == 'Android' && secrets.ANDROID_KEYALIAS_PASS || '' }}
+      
+      # iOS-simulator: Prepare Xcode project for simulator
+      - name: Prepare Xcode project for simulator
+        if: matrix.platform == 'iOS-simulator'
+        run: |
+          cd build/iOS/iOS/
+          
+          echo "Configuring Xcode project for iOS simulator build..."
+          
+          # Set ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES to NO (same as device build)
+          sed -i '' 's/ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES = YES/ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES = NO/g' Unity-iPhone.xcodeproj/project.pbxproj
+          sed -i '' 's/ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES = "$(inherited)"/ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES = NO/g' Unity-iPhone.xcodeproj/project.pbxproj
+          sed -i '' 's/EMBEDDED_CONTENT_CONTAINS_SWIFT = YES/EMBEDDED_CONTENT_CONTAINS_SWIFT = NO/g' Unity-iPhone.xcodeproj/project.pbxproj
+          
+          # Configure for simulator build (ONLY_ACTIVE_ARCH can be YES for simulator)
+          echo "Build configuration updated for simulator build"
       
       # iOS: Prepare Xcode project
       - name: Prepare Xcode project
@@ -728,9 +745,168 @@ jobs:
           echo "✅ IPA file found: build/iOS/iOS/export/StashDemo.ipa"
           du -h build/iOS/iOS/export/StashDemo.ipa
       
+      # iOS-simulator: Get version from git tag
+      - name: Get version from git tag (simulator)
+        if: matrix.platform == 'iOS-simulator'
+        run: |
+          echo "Getting version information from git..."
+          
+          # Fetch all tags to ensure we have the latest
+          git fetch --tags --force 2>/dev/null || echo "Note: Could not fetch tags (may not have remote access)"
+          
+          # Get latest tag (version)
+          LATEST_TAG=$(git tag --sort=-version:refname 2>/dev/null | head -1 || echo "")
+          
+          if [ -z "$LATEST_TAG" ]; then
+            LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+          fi
+          
+          if [ -z "$LATEST_TAG" ]; then
+            echo "⚠️  WARNING: No git tags found, using default version 1.0.0"
+            LATEST_TAG="1.0.0"
+          else
+            LATEST_TAG=$(echo "$LATEST_TAG" | sed 's/^v//')
+            echo "Latest tag (version): $LATEST_TAG"
+          fi
+          
+          echo "MARKETING_VERSION=$LATEST_TAG" >> $GITHUB_ENV
+          echo "✅ MARKETING_VERSION set to: $LATEST_TAG"
+      
+      # iOS-simulator: Generate build number
+      - name: Generate build number (simulator)
+        if: matrix.platform == 'iOS-simulator'
+        run: |
+          BUILD_NUMBER=$(date +%s)
+          echo "Build number (epoch seconds): $BUILD_NUMBER"
+          echo "CURRENT_PROJECT_VERSION=$BUILD_NUMBER" >> $GITHUB_ENV
+          echo "✅ CURRENT_PROJECT_VERSION set to: $BUILD_NUMBER"
+      
+      # iOS-simulator: Set version in Xcode project
+      - name: Set version in Xcode project (simulator)
+        if: matrix.platform == 'iOS-simulator'
+        run: |
+          cd build/iOS/iOS/
+          
+          echo "Setting version in Xcode project:"
+          echo "  MARKETING_VERSION: $MARKETING_VERSION"
+          echo "  CURRENT_PROJECT_VERSION: $CURRENT_PROJECT_VERSION"
+          
+          # Update MARKETING_VERSION in project.pbxproj
+          sed -i '' "s/MARKETING_VERSION = [^;]*;/MARKETING_VERSION = $MARKETING_VERSION;/g" Unity-iPhone.xcodeproj/project.pbxproj
+          sed -i '' "s/MARKETING_VERSION = \"[^\"]*\";/MARKETING_VERSION = $MARKETING_VERSION;/g" Unity-iPhone.xcodeproj/project.pbxproj
+          
+          # Update CURRENT_PROJECT_VERSION in project.pbxproj
+          sed -i '' "s/CURRENT_PROJECT_VERSION = [^;]*;/CURRENT_PROJECT_VERSION = $CURRENT_PROJECT_VERSION;/g" Unity-iPhone.xcodeproj/project.pbxproj
+          sed -i '' "s/CURRENT_PROJECT_VERSION = \"[^\"]*\";/CURRENT_PROJECT_VERSION = $CURRENT_PROJECT_VERSION;/g" Unity-iPhone.xcodeproj/project.pbxproj
+          
+          # Update Info.plist files
+          if [ -f "Info.plist" ]; then
+            plutil -replace CFBundleVersion -string "$CURRENT_PROJECT_VERSION" Info.plist
+            plutil -replace CFBundleShortVersionString -string "$MARKETING_VERSION" Info.plist
+            plutil -replace ITSAppUsesNonExemptEncryption -bool NO Info.plist
+          fi
+          
+          find . -name "Info.plist" -type f | while read plist; do
+            plutil -replace CFBundleVersion -string "$CURRENT_PROJECT_VERSION" "$plist" 2>/dev/null || true
+            plutil -replace CFBundleShortVersionString -string "$MARKETING_VERSION" "$plist" 2>/dev/null || true
+            plutil -replace ITSAppUsesNonExemptEncryption -bool NO "$plist" 2>/dev/null || true
+          done
+          
+          echo "✅ Version set in Xcode project and Info.plist files"
+      
+      # iOS-simulator: Build for simulator
+      - name: Build iOS simulator app
+        if: matrix.platform == 'iOS-simulator'
+        run: |
+          cd build/iOS/iOS/
+          
+          echo "Building for iOS simulator..."
+          
+          # Get available simulator destinations
+          echo "Available simulator destinations:"
+          xcodebuild -project Unity-iPhone.xcodeproj -scheme Unity-iPhone -showdestinations | grep -i simulator | head -3
+          
+          # Build for simulator (using generic simulator destination)
+          # Use iphonesimulator SDK instead of iphoneos
+          # Specify build output directory to make it easier to find
+          xcodebuild build \
+            -project Unity-iPhone.xcodeproj \
+            -scheme Unity-iPhone \
+            -configuration Release \
+            -sdk iphonesimulator \
+            -destination 'generic/platform=iOS Simulator' \
+            -derivedDataPath ./DerivedData \
+            MARKETING_VERSION="$MARKETING_VERSION" \
+            CURRENT_PROJECT_VERSION="$CURRENT_PROJECT_VERSION" \
+            INFOPLIST_KEY_CFBundleShortVersionString="$MARKETING_VERSION" \
+            INFOPLIST_KEY_CFBundleVersion="$CURRENT_PROJECT_VERSION" \
+            INFOPLIST_KEY_ITSAppUsesNonExemptEncryption="NO" \
+            CODE_SIGNING_ALLOWED="NO" \
+            CODE_SIGNING_REQUIRED="NO" \
+            ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES=NO
+          
+          echo "✅ Simulator build completed"
+          
+          # Find the built app in DerivedData (use absolute path)
+          APP_BUNDLE=$(find "$(pwd)/DerivedData" -name "*.app" -type d -path "*/Build/Products/Release-iphonesimulator/*" | head -1)
+          if [ -n "$APP_BUNDLE" ]; then
+            echo "Built app found: $APP_BUNDLE"
+            ls -la "$APP_BUNDLE"
+            echo "APP_BUNDLE_PATH=$APP_BUNDLE" >> $GITHUB_ENV
+          else
+            echo "⚠️  WARNING: Could not find built .app bundle in DerivedData"
+            echo "Searching in alternative locations..."
+            APP_BUNDLE=$(find "$(pwd)" -name "*.app" -type d | head -1)
+            if [ -n "$APP_BUNDLE" ]; then
+              echo "Found app in alternative location: $APP_BUNDLE"
+              echo "APP_BUNDLE_PATH=$APP_BUNDLE" >> $GITHUB_ENV
+            else
+              echo "ERROR: Could not find built .app bundle"
+              exit 1
+            fi
+          fi
+      
+      # iOS-simulator: Create simulator build archive
+      - name: Create iOS simulator build archive
+        if: matrix.platform == 'iOS-simulator'
+        run: |
+          # Use the APP_BUNDLE_PATH from previous step (absolute path), or find it
+          if [ -z "$APP_BUNDLE_PATH" ] || [ ! -d "$APP_BUNDLE_PATH" ]; then
+            echo "APP_BUNDLE_PATH not set or invalid, searching..."
+            cd build/iOS/iOS/
+            APP_BUNDLE=$(find "$(pwd)/DerivedData" -name "*.app" -type d -path "*/Build/Products/Release-iphonesimulator/*" | head -1)
+            if [ -z "$APP_BUNDLE" ]; then
+              APP_BUNDLE=$(find "$(pwd)" -name "*.app" -type d | head -1)
+            fi
+          else
+            APP_BUNDLE="$APP_BUNDLE_PATH"
+          fi
+          
+          if [ -z "$APP_BUNDLE" ] || [ ! -d "$APP_BUNDLE" ]; then
+            echo "ERROR: Could not find built .app bundle"
+            echo "Searched in:"
+            echo "  - $APP_BUNDLE_PATH (from previous step)"
+            echo "  - build/iOS/iOS/DerivedData/Build/Products/Release-iphonesimulator/"
+            exit 1
+          fi
+          
+          echo "Found app bundle: $APP_BUNDLE"
+          
+          # Create zip archive of the .app bundle
+          cd ${{ github.workspace }}
+          ZIP_FILE="${{ github.workspace }}/iOS-simulator-latest.zip"
+          
+          # Use ditto to create a proper macOS zip (preserves metadata, permissions, symlinks)
+          APP_NAME=$(basename "$APP_BUNDLE")
+          ditto -ck --sequesterRsrc --keepParent "$APP_BUNDLE" "$ZIP_FILE"
+          
+          echo "✅ Created simulator build archive: $ZIP_FILE"
+          ls -lh "$ZIP_FILE"
+          echo "SIMULATOR_ZIP=$ZIP_FILE" >> $GITHUB_ENV
+      
       # iOS: Upload to TestFlight using Apple's recommended action
       - name: Upload to TestFlight
-        if: matrix.platform == 'iOS' && (github.event_name == 'push' || github.event_name == 'workflow_run' || (github.event_name == 'workflow_dispatch' && inputs.upload_to_testflight == true))
+        if: matrix.platform == 'iOS' && (github.event_name == 'push' || github.event_name == 'workflow_run' || (github.event_name == 'workflow_dispatch' && github.event.inputs.upload_to_testflight == true))
         uses: apple-actions/upload-testflight-build@v1
         with:
           app-path: 'build/iOS/iOS/export/StashDemo.ipa'
@@ -786,114 +962,20 @@ jobs:
           gzip: false
           process_gcloudignore: false
       
-      # iOS: Build simulator version
-      - name: Build iOS simulator version
-        if: matrix.platform == 'iOS'
-        run: |
-          cd build/iOS/iOS/
-          
-          echo "Building iOS simulator version..."
-          echo "  MARKETING_VERSION (version): $MARKETING_VERSION"
-          echo "  CURRENT_PROJECT_VERSION (build): $CURRENT_PROJECT_VERSION"
-          
-          # Create a custom derived data path for easier access
-          DERIVED_DATA_PATH="$(pwd)/DerivedData"
-          mkdir -p "$DERIVED_DATA_PATH"
-          
-          # Clean previous simulator build
-          xcodebuild clean \
-            -project Unity-iPhone.xcodeproj \
-            -scheme Unity-iPhone \
-            -configuration Release \
-            -sdk iphonesimulator \
-            -destination 'generic/platform=iOS Simulator' \
-            -derivedDataPath "$DERIVED_DATA_PATH" || true
-          
-          # Build for simulator (no signing needed for simulator builds)
-          xcodebuild build \
-            -project Unity-iPhone.xcodeproj \
-            -scheme Unity-iPhone \
-            -configuration Release \
-            -sdk iphonesimulator \
-            -destination 'generic/platform=iOS Simulator' \
-            -derivedDataPath "$DERIVED_DATA_PATH" \
-            PRODUCT_BUNDLE_IDENTIFIER="com.stash.sdkdemo" \
-            MARKETING_VERSION="$MARKETING_VERSION" \
-            CURRENT_PROJECT_VERSION="$CURRENT_PROJECT_VERSION" \
-            INFOPLIST_KEY_CFBundleShortVersionString="$MARKETING_VERSION" \
-            INFOPLIST_KEY_CFBundleVersion="$CURRENT_PROJECT_VERSION" \
-            INFOPLIST_KEY_ITSAppUsesNonExemptEncryption="NO" \
-            CODE_SIGNING_ALLOWED="NO" \
-            CODE_SIGNING_REQUIRED="NO" \
-            ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES=NO \
-            ONLY_ACTIVE_ARCH=NO
-          
-          echo "Simulator build completed"
-          
-          # Find the built .app bundle in DerivedData
-          SIMULATOR_APP=$(find "$DERIVED_DATA_PATH" -name "*.app" -type d -path "*/Build/Products/Release-iphonesimulator/*" | head -1)
-          
-          if [ -z "$SIMULATOR_APP" ]; then
-            # Fallback: look in standard DerivedData location
-            SIMULATOR_APP=$(find ~/Library/Developer/Xcode/DerivedData -name "*.app" -type d -path "*/Build/Products/Release-iphonesimulator/*" | head -1)
-          fi
-          
-          if [ -z "$SIMULATOR_APP" ]; then
-            echo "ERROR: Simulator .app bundle not found"
-            echo "Searching in DerivedData:"
-            find "$DERIVED_DATA_PATH" -name "*.app" -type d 2>/dev/null || echo "No .app found in custom DerivedData"
-            echo "Searching in standard DerivedData:"
-            find ~/Library/Developer/Xcode/DerivedData -name "*.app" -type d -path "*/Build/Products/*" 2>/dev/null | head -5 || echo "No .app found in standard DerivedData"
-            exit 1
-          fi
-          
-          echo "Found simulator app: $SIMULATOR_APP"
-          
-          # Create a directory for simulator build output
-          mkdir -p simulator-build
-          cp -R "$SIMULATOR_APP" simulator-build/
-          
-          echo "Simulator app copied to simulator-build/"
-          ls -la simulator-build/
-      
-      # iOS: Package simulator build as zip
-      - name: Package iOS simulator build
-        if: matrix.platform == 'iOS'
-        run: |
-          cd build/iOS/iOS/
-          
-          # Find the simulator app
-          SIMULATOR_APP=$(find simulator-build -name "*.app" -type d | head -1)
-          if [ -z "$SIMULATOR_APP" ]; then
-            echo "ERROR: Simulator .app bundle not found in simulator-build/"
-            exit 1
-          fi
-          
-          APP_NAME=$(basename "$SIMULATOR_APP")
-          ZIP_FILE="${{ github.workspace }}/iOS-Simulator-latest.zip"
-          
-          # Use ditto to create a proper macOS zip (preserves metadata, permissions, symlinks)
-          cd simulator-build
-          ditto -ck --sequesterRsrc --keepParent "$APP_NAME" "$ZIP_FILE"
-          
-          echo "Created simulator zip: $ZIP_FILE"
-          ls -lh "$ZIP_FILE"
-          du -h "$ZIP_FILE"
-      
-      # iOS: Upload simulator build to GCS
+      # iOS-simulator: Upload simulator build to GCS
       - name: Upload iOS simulator build to GCS
-        if: matrix.platform == 'iOS'
+        if: matrix.platform == 'iOS-simulator'
         uses: google-github-actions/upload-cloud-storage@v3
         with:
-          path: ${{ github.workspace }}/iOS-Simulator-latest.zip
-          destination: stash_sdk_demo/iOS/latest/StashDemo-Simulator.zip
+          path: ${{ env.SIMULATOR_ZIP }}
+          destination: stash_sdk_demo/iOS-simulator/latest/iOS-simulator-latest.zip
           parent: false
           gzip: false
           process_gcloudignore: false
       
-      # Create zip archive for non-Android/iOS platforms (macOS, Windows, etc.)
+      # Create zip archive for non-Android/iOS/iOS-simulator platforms (macOS, Windows, etc.)
       - name: Create latest build archive
-        if: matrix.platform != 'Android' && matrix.platform != 'iOS'
+        if: matrix.platform != 'Android' && matrix.platform != 'iOS' && matrix.platform != 'iOS-simulator'
         shell: bash
         run: |
           cd ${{ github.workspace }}
@@ -945,7 +1027,7 @@ jobs:
       
       # Upload zip archive to GCS latest/ directory for direct download
       - name: Upload latest build archive to GCS
-        if: matrix.platform != 'Android' && matrix.platform != 'iOS'
+        if: matrix.platform != 'Android' && matrix.platform != 'iOS' && matrix.platform != 'iOS-simulator'
         uses: google-github-actions/upload-cloud-storage@v3
         with:
           path: ${{ github.workspace }}/${{ matrix.platform }}-latest.zip
